--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </header>
     <main id="movieContainer">
         <!-- Movie results will be displayed here -->
-    </main>
+    </main> 
+    <footer>@Made By Aman Gupta</footer>
     <script src="script.js"></script>
 </body>
 </html>
